Edit button visibility based on config, Fix CSS

--- a/micro-frontends/src/next-ui/Containers/formDisplayControl/formDisplayControl.scss
+++ b/micro-frontends/src/next-ui/Containers/formDisplayControl/formDisplayControl.scss
@@ -70,6 +70,10 @@
   padding: 10px;
 }
 
+.form-heading{
+  color: #161616;
+}
+
 .form-link:hover {
   text-decoration: underline;
 }
@@ -77,14 +81,3 @@
 .fa-pencil:hover{
   color: #669999;
 }
-// .form-name-text{
-//   font-size: 14px;
-//   text-align: left;
-//   padding: 15px;
-// }
-
-// .form-provider-text{
-//   font-size: 14px;
-//   text-align: right;
-//   padding: 8px;
-// }
